<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kevin.empresaxyz.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/materialType"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbMaterial"
            android:layout_width="match_parent"
            android:layout_height="49dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pendantType"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbPendant"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="0.04" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pendantMaterial"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbPendantMaterial"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="0.04" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currencyType"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <RadioButton
                android:id="@+id/rbPesos"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/peso" />

            <RadioButton
                android:id="@+id/rbDollars"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/dollar" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quotedValue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lblResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnQuote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculate"
                android:text="@string/quote" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clear"
                android:text="@string/clear" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
